# hackscripts

./: .gitignore
htb-web/0xBOverchunked/: main.go
htb-web/emoji_voting/: main.go
htb-web/etree/: main.go
htb-web/feedback_flux/: README.md  main.go
htb-web/neovault/: README.md  go.mod  main.go
htb-web/the_magic_informer/: Cargo.toml  README.md
htb-web/the_magic_informer/src/: main.rs
labs/bypass403/python_nginx_headers/: Dockerfile  app.py  docker-compose.yml  nginx.conf
labs/bypass403/simple_python_nginx/: docker-compose.yml  nginx.conf  server.py
