[package]
name = "the_magic_informer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
cookie = "0.18"
base64 = "0.22.1"
serde_json = "1.0"
